--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,13 @@
         <head>
             <title>Spam Detection</title>
             <!-- Compiled and minified CSS -->
+            <link rel = "stylesheet"
+         href = "https://fonts.googleapis.com/icon?family=Material+Icons">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+            <script type = "text/javascript"
+         src = "https://code.jquery.com/jquery-2.1.1.min.js"></script>           
+      <script src = "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js">
+      </script> 
                 <!-- static files css !! -->
                 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
                     <!-- animate.css cdn  -->
@@ -27,22 +33,41 @@
                             <div class="row">
                                 <div class="col lg12 m7 s12 col-centered">
                                     <h2 class="header center" >Spam or HAM ? </h2>
-                                    <div class="card  darken-1">
-                                        <div class="card-content ">
-                                            <p align="center">I am a simple ML model. I am here to predict wheather an mail is spam or not lets check it out !.</p><br>
-                                            <span class="card-title">Check it out !!</span>
-                                            <!--  <p>Paste the email below in the Text Box.</p> -->
+                                    <div class="card">
+                                        <div class="card-content">
+                                          <p align="center">I am a simple ML model. I am here to predict wheather an mail is spam or not lets check it out !.</p>
+                                        </div>
+                                        <div class="card-tabs">
+                                          <ul class="tabs tabs-fixed-width">
+                                            <li class="tab"><a href="#Type">check it out !</a></li>
+                                            <li class="tab"><a href="#test5">Upload File</a></li>
+                                          </ul>
+                                        </div>
+                                        <div class="card-content  lighten-4">
+                                          <div id="Type">Email !
                                             <form method="post" action="/api" id="predict_form">
-                                                <label for="email">Email !</label>
+                                                <label for="email">Paste the email below</label>
                                                 <!-- <input placeholder="Paste the email " id="email" name="email" type="text" class="validate"> -->
                                                 <textarea class="form-control "  style="min-height: 6em;" id="email" name="email" rows="20"></textarea>
                                             </form>
-                                        </div>
-                                        <div class="card-action">
-                                            <button class="btn btn-primary waves-effect waves-light  " type="submit" name="action" id="predict">Submit
-        
+                                            <center><button class="btn btn-primary waves-effect waves-light  " type="submit" name="action" id="predict">Submit</button></center>
+                                          </div>
+                                          <div id="test5">Upload File
+                                            <form action="#">
+                                            <div class="file-field input-field">
+                                              <div class="btn">
+                                                <span>File</span>
+                                                <input type="file">
+                                              </div>
+                                              <div class="file-path-wrapper">
+                                                <input class="file-path validate" type="text" placeholder="Upload one or more files">
+                                              </div>
                                             </div>
+                                          </form>
+                                            <center><button class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>Upload</button></center>
+                                          </div>
                                         </div>
+                                      </div>
                                     </div>
                                 </div>
                             </div>
