--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,8 @@
                                             <center><button class="btn btn-primary waves-effect waves-light  " type="submit" name="action" id="predict">Submit</button></center>
                                           </div>
                                           <div id="test5">Upload File
-                                            <form action="#">
+                                            <!-- <form action = "http://localhost:5000/upload" method = "POST" 
+         enctype = "multipart/form-data">
                                             <div class="file-field input-field">
                                               <div class="btn">
                                                 <span>File</span>
@@ -64,7 +65,25 @@
                                               </div>
                                             </div>
                                           </form>
-                                            <center><button class="waves-effect waves-light btn"><i class="material-icons left">cloud</i>Upload</button></center>
+                                            <center><button class="waves-effect waves-light btn" value=Upload type="submit"><i class="material-icons left">cloud</i>Upload</button></center> -->
+                                            <form class="form-signin" action = "http://localhost:5000/upload" method = "POST" 
+         enctype = "multipart/form-data">
+
+                    <div class="form-group">
+                      <!--  <input type="file" class="custom-file-input" id="inputGroupFile02">
+    <label class="custom-file-label" for="inputGroupFile02">Choose file</label> -->
+     <input type = "file"  name = "file" />
+                    </div>
+
+                <div style="text-align:center;">
+                    <!-- <input type = "submit" value=Upload /> -->
+                   <button type="submit" value=Upload class="btn btn-outline-primary">Upload</button>
+
+                </div>
+                 </form>
+                 <div class="card-footer text-muted">
+                   <progress id="progressBar" value="0" max="100" style="width:300px;">
+                 </div>
                                           </div>
                                         </div>
                                       </div>
