--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                             </center>
                         </div>
                         <div id="test5">
-                            <form class="form-signin" action="http://localhost:5000/upload" method="POST" enctype="multipart/form-data">
+                            <form class="form-signin" action="/upload" method="POST" enctype="multipart/form-data">
                                 <div class="file-field input-field">
                                      <div class="btn">
                                          <span>File</span>
