test csv file attached

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,9 @@
 
                                 </div>
                             </form>
+                            <div class="card-action">
+                                Dont have any file Test file ! <a href="/test-file" target="blank"> <i class="small material-icons">file_download</i>Dowload here!</a>
+                            </div>
                         </div>
                     </div>
                 </div>
