--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                 <h2 class="header center">Spam or HAM ? </h2>
                 <div class="card">
                     <div class="card-content">
-                        <p align="center">I am a simple ML model. I am here to predict wheather an mail is spam or not lets check it out !.</p>
+                        <p align="center">I am a simple ML model. I am here to predict whether an email is spam or not lets check it out !.</p>
                     </div>
                     <div class="card-tabs">
                         <ul class="tabs tabs-fixed-width">
@@ -73,7 +73,7 @@
                                 </div>
                             </form>
                             <div class="card-action">
-                                Dont have any file Test file ! <a href="/test-file" target="blank"> <i class="small material-icons">file_download</i>Dowload here!</a>
+                                <P>Don't have any file? Here's a Test file ! <a href="/test-file" target="blank"> <i class="small material-icons">file_download</i>Dowload here!</a></P>
                             </div>
                         </div>
                     </div>
