--- a/templates/index.html
+++ b/templates/index.html
@@ -29,10 +29,15 @@
             <ul id="nav-mobile" class="left hide-on-med-and-down"></ul>
         </div>
     </nav>
+    <div class="jumbotron text-center">
+        <div class="container">
+            <h2 class="header center">Spam or HAM ? </h2>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col lg12 m7 s12 col-centered">
-                <h2 class="header center">Spam or HAM ? </h2>
+                
                 <div class="card">
                     <div class="card-content">
                         <p align="center">I am a simple ML model. I am here to predict whether an email is spam or not lets check it out !.</p>
