--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,13 @@
   margin: 0 auto;
 }
 
+.jumbotron{
+	padding:4rem 2rem;
+	background-color: #e9ecef;
+	margin-top: 2rem;
+	border-radius: .3rem;
+}
+
 .center {
   padding-left: 0em;
 }
