--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="navbar-dark bg-dark">
         <div class="nav-wrapper">
             <a href="#" class="brand-logo center">Spam Detection</a>
             <ul id="nav-mobile" class="left hide-on-med-and-down"></ul>
